--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.testfairy.atlassian.plugins</groupId>
     <artifactId>testfairy-jira-p2-plugin</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.4-SERVER</version>
     <organization>
         <name>TestFairy Ltd</name>
         <url>http://www.testfairy.com/</url>
